platform/cis-prototype.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: cis-prototype
  name: cis-prototype
spec:
  ports:
  - port: 80
    name: ui
  - port: 8080
    name: api
  selector:
    component: cis-prototype
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    component: cis-prototype
  name: cis-prototype
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: cis-prototype
    spec:
      volumes:
      - name: apisrc 
        hostPath:
          path: /home/core/cis-apiserver/
      - name: uisrc
        hostPath:
          path: /home/core/cis-ui/
      containers:
      - image: bodom0015/cis-apiserver
        name: cis-api
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: apisrc 
          mountPath: /usr/src/app/
      - image: bodom0015/cis-ui
        name: cis-ui
        ports:
        - containerPort: 80
        volumeMounts:
        - name: uisrc
          mountPath: /usr/share/nginx/html
