platform/cis-ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: cis-prototype
  name: cis-prototype
spec:
  ports:
  - port: 3000
    name: ui
  - port: 8080
    name: api
  selector:
    component: cis-prototype
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    component: cis-prototype
  name: cis-prototype
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: cis-prototype
    spec:
      volumes:
      - name: data
        hostPath:
          path: /home/core/cis-startup/data
      containers:
      - image: bodom0015/cis-apiserver
        name: cis-api
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 100m
      - image: bodom0015/cis-ui
        name: cis-ui
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 100m
        volumeMounts:
        - name: data
          mountPath: /app/public/data
