platform/noflo-ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: noflo-ui
  name: noflo-ui
spec:
  ports:
  - port: 9999
  selector:
    component: noflo-ui
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    component: noflo-ui
  name: noflo-ui
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: noflo-ui
    spec:
      containers:
      - image: bodom0015/noflo-ui:0.22.1
        name: noflo-ui
        ports:
        - containerPort: 9999
