platform/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: rabbitmq
  name: rabbitmq
spec:
  ports:
  - port: 5672
  selector:
    component: rabbitmq
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    component: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: rabbitmq
    spec:
      containers:
      - image: rabbitmq
        name: rabbitmq
        ports:
        - containerPort: 5672
        resources:
          limits:
            cpu: 100m
