platform/girder.prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cis
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
  name: cis-girder
  namespace: cis
spec:
  tls:
  - hosts:
    - cis.ndslabs.org
    secretName: cis-tls-secret
  rules:
  - host: cis.ndslabs.org
    http:
      paths:
      - path: /
        backend:
          serviceName: cis-girder
          servicePort: 80
      - path: /girder
        backend:
          serviceName: cis-girder
          servicePort: 8080
      - path: /static
        backend:
          serviceName: cis-girder
          servicePort: 8080
      - path: /api
        backend:
          serviceName: cis-girder
          servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: cis-girder
  name: cis-girder
  namespace: cis
spec:
  ports:
  - name: http
    port: 80
  - name: admin
    port: 8080
  selector:
    component: cis-girder
