platform/girder.yaml
# Ingress rules assign a hostname/path to expose particular ports to the public internet
# NOTE: "Host" header must match in order to be routed
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # TODO: Tie into Kubernetes OAuth?
  name: cis-ui
spec:
  tls:
  - hosts:
    - www.cis.ndslabs.org
    secretName: cis-tls-secret
  rules:
  - host: www.cis.ndslabs.org
    http:
      paths:
      - path: /
        backend:
          serviceName: cis-girder
          servicePort: 80
      - path: /girder/
        backend:
          serviceName: cis-girder
          servicePort: 8080
      - path: /static/
        backend:
          serviceName: cis-girder
          servicePort: 8080
      - path: /api/v1/
        backend:
          serviceName: cis-girder
          servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: cis-girder
  name: cis-girder
spec:
  ports:
  - name: http
    port: 80
  - name: admin
    port: 8080
  selector:
    component: cis-girder
