platform/ingress.yaml
# Ingress rules assign a hostname/path to expose particular ports to the public internet
# NOTE: "Host" header must match in order to be routed
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
  name: nest-ingress
spec:
  tls:
  - hosts:
    - cis.mldev.ndslabs.org
    secretName: cis-tls-secret
  rules:
  - host: cis.mldev.ndslabs.org
    http:
      paths:
      - path: /
        backend:
          serviceName: cis-ui
          servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cloud9
  annotations:
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: basic-auth
    ingress.kubernetes.io/auth-realm: "Authentication Required"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - cis.mldev.ndslabs.org
    secretName: cis-tls-secret
  rules:
  - host: cis.mldev.ndslabs.org
    http:
      paths:
      - path: /ide.html
        backend:
          serviceName: cloud9
          servicePort: 8001
      - path: /vfs/
        backend:
          serviceName: cloud9
          servicePort: 8001
      - path: /static/
        backend:
          serviceName: cloud9
          servicePort: 8001
      - path: /configs
        backend:
          serviceName: cloud9
          servicePort: 8001
      - path: /_ping
        backend:
          serviceName: cloud9
          servicePort: 8001
---
